--- a/css/index.css
+++ b/css/index.css
@@ -563,6 +563,14 @@ main {
     display: flex;
     gap: 2rem;
     transition: 0.4s;
+    text-align: right;
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      filter: brightness(30%);
+      transition: 0.4s;
+    }
     :is(.info) {
       position: absolute;
       left: 3rem;
@@ -574,7 +582,7 @@ main {
     > div {
       position: relative;
       flex: 1;
-      background-color: #be123c;
+      overflow: hidden;
       border-radius: 3rem;
       transition: 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
       &::before {
@@ -582,6 +590,7 @@ main {
         position: absolute;
         left: 3rem;
         bottom: 3rem;
+        z-index: 10;
         color: #fff;
         font-size: 3rem;
         font-weight: 300;
@@ -593,6 +602,9 @@ main {
         flex: 2.5;
         &::before {
           opacity: 0;
+        }
+        video {
+          filter: brightness(70%);
         }
         .count,
         .info {
