--- a/css/index.css
+++ b/css/index.css
@@ -28,9 +28,14 @@ fieldset {
   }
 }
 
-:is(.mxauto, .header) {
+:is(.mxauto, .header, .about-header) {
   width: 1600px;
   margin-inline: auto;
+  @media (width < 720px) {
+    width: 100%;
+    padding-inline: 1.5rem;
+    box-sizing: border-box;
+  }
 }
 
 :root {
@@ -512,8 +517,6 @@ main {
   background-color: #1e293b;
   padding-block: 15rem;
   > div {
-    width: 1600px;
-    margin-inline: auto;
     color: #fff;
     text-align: center;
   }
@@ -532,6 +535,11 @@ main {
   background-color: #f9fafb;
   color: #1e293b;
   padding: 4rem 2rem;
+  @media (width < 720px) {
+    img {
+      width: 100%;
+    }
+  }
   > div {
     display: grid;
     max-width: 1600px;
@@ -546,8 +554,19 @@ main {
   padding-block: 17rem 10rem;
   display: grid;
   grid-template-columns: 45rem 1fr;
+  @media (width < 720px) {
+    padding-block: 12rem 80vw;
+    grid-template-columns: 1fr;
+  }
   .text {
     padding-top: 10rem;
+    @media (width < 720px) {
+      position: absolute;
+      left: 1.5rem;
+      right: 1.5rem;
+      bottom: 2rem;
+      order: 2;
+    }
     h2 {
       margin-bottom: 8rem;
       span {
@@ -557,6 +576,13 @@ main {
         font-weight: 200;
         line-height: 1;
       }
+      @media (width < 720px) {
+        margin-bottom: 2rem;
+        span {
+          font-size: 4rem;
+          line-height: 1.2;
+        }
+      }
     }
   }
   .video {
@@ -564,6 +590,9 @@ main {
     gap: 2rem;
     transition: 0.4s;
     text-align: right;
+    @media (width < 720px) {
+      order: 1;
+    }
     video {
       width: 100%;
       height: 100%;
@@ -663,8 +692,21 @@ main {
     margin-left: 2rem;
     font-size: 2.2rem;
   }
+  @media (width < 720px) {
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 1.6rem;
+    margin: 0;
+    span {
+      height: 5rem;
+      font-size: 2rem;
+    }
+  }
   .about-visual & {
     margin-left: 1rem;
     box-shadow: 2px 2px 20px rgba(255, 255, 255, 0.2);
+    @media (width < 720px) {
+      margin: 0;
+    }
   }
 }
