--- a/include/MegaMenu.html
+++ b/include/MegaMenu.html
@@ -1,17 +1,43 @@
 <div class="meagamenu">
   <nav>
+    <a href="/">Home</a>
   </nav>
+  <button type="button" class="btn-close">Close</button>
   <style>
-    @scope {
+    @media (width < 1024px) {
+      @scope {
+        :scope {}
+
+      }
+    }
+
+    @scope (#megamenu) {
       :scope {
-        display: none;
-        position: fixed;
-        inset: -2rem 0 0;
-        background-color: #fff;
-        width: 100dvw;
-        width: 100vw;
+        z-index: 1000;
+        inset: 0;
+        width: 100%;
         height: 100dvh;
         height: 100vh;
+        border: none;
+        box-sizing: border-box;
+        background: #000;
+        padding: 3rem;
+      }
+
+      .search {
+        display: block;
+        width: 100%;
+      }
+
+      nav {
+        display: grid;
+        gap: 1rem;
+
+        a {
+          color: #fff;
+          font-size: 1.8rem;
+          text-decoration: none;
+        }
       }
     }
   </style>
