--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,7 @@ fieldset {
   }
 }
 
-:is(.mxauto, .header, .about-header > div, .detail-wrap, .main-slide .information) {
+:is(.mxauto, .header, .about-header > div, .detail-wrap, .main-slide .information, .search-result) {
   width: 160rem;
   margin-inline: auto;
   @media (width < 720px) {
@@ -227,6 +227,7 @@ fieldset {
     justify-content: center;
     @media (width < 1024px) {
       height: auto;
+      margin-top: 10rem;
     }
   }
 }
@@ -242,14 +243,17 @@ fieldset {
     }
     &::before {
       content: "";
-      position: absolute;
+      position: fixed;
       inset: 0;
       z-index: -1;
       background: rgba(0, 0, 0, 0.75);
+      @media (width < 1024px) {
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1));
+      }
     }
   }
   .bg {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     inset: 0;
@@ -262,6 +266,12 @@ fieldset {
       height: 50rem;
       object-fit: cover;
       border-radius: 4rem;
+      @media (width < 1024px) {
+        width: 50%;
+        max-width: 40rem;
+        height: auto;
+        border-radius: 1rem;
+      }
     }
   }
   .top {
@@ -269,6 +279,9 @@ fieldset {
     justify-content: space-between;
     align-items: center;
     padding-bottom: 6rem;
+    @media (width < 1024px) {
+      padding-bottom: 1rem;
+    }
   }
   .title {
     color: #fff;
@@ -344,6 +357,15 @@ fieldset {
       line-height: normal;
       padding-right: 1rem;
     }
+    @media (width < 1024px) {
+      strong {
+        width: 6rem;
+      }
+      strong,
+      span {
+        font-size: 1.4rem;
+      }
+    }
   }
 }
 @scope (.search-result) {
@@ -351,8 +373,10 @@ fieldset {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
     gap: 8.7rem;
-    width: 160rem;
-    margin-inline: auto;
+    @media (width < 1024px) {
+      grid-template-columns: repeat(auto-fill, minmax(12.5rem, 1fr));
+      gap: 2.5rem 1.5rem;
+    }
   }
   a {
     text-decoration: none;
@@ -361,6 +385,24 @@ fieldset {
     width: 100%;
     aspect-ratio: 0.75;
     object-fit: cover;
+    @media (width < 1024px) {
+      border-radius: 1rem;
+    }
+  }
+  .thumbnail {
+    &:has(svg) {
+      aspect-ratio: 0.75;
+      text-align: center;
+      align-content: center;
+      background: rgba(255, 255, 255, 0.1);
+      color: rgba(255, 255, 255, 0.2);
+      @media (width < 1024px) {
+        border-radius: 1rem;
+      }
+    }
+    svg {
+      width: 6rem;
+    }
   }
   .title {
     color: #fff;
@@ -369,14 +411,21 @@ fieldset {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    @media (width < 1024px) {
+      font-size: 1.4rem;
+    }
   }
   .information {
     color: var(--gray-400, #9ca3af);
     font-family: "DM Sans";
     font-size: 1.2rem;
-    font-style: normal;
     font-weight: 700;
     line-height: normal;
+    @media (width < 1024px) {
+      display: flex;
+      justify-content: space-between;
+      font-weight: 300;
+    }
   }
   li {
     list-style: none;
@@ -403,6 +452,9 @@ fieldset {
     font-weight: 700;
     line-height: normal;
     padding-top: 7rem;
+    @media (width < 1024px) {
+      padding: 0 2rem;
+    }
     &::before {
       content: "";
       width: 5.4rem;
@@ -435,7 +487,10 @@ fieldset {
 /* -------------------------------------------------------------------------- */
 
 .btn-more {
-  display: inline-flex;
+  display: flex;
+  margin-inline: auto;
+  margin-block: 2rem 5rem;
+  border: none;
   align-items: center;
   padding: 0.6rem 1.6rem;
   gap: 0.8rem;
@@ -447,6 +502,7 @@ fieldset {
   font-size: 1.4rem;
   font-weight: 700;
   line-height: 2.4rem;
+  cursor: pointer;
   &::before {
     content: "";
     width: 2rem;
