--- a/include/Header.html
+++ b/include/Header.html
@@ -1,7 +1,7 @@
 <h1 class="logo">
   <a href="/"><img src="../images/logo.svg" alt="" /></a>
 </h1>
-<form class="search" id="search">
+<form class="search">
   <fieldset>
     <legend>영화검색</legend>
     <input type="search" placeholder="What do you want to watch?" />
@@ -26,6 +26,16 @@
 
           #megamenu & {
             display: block;
+            width: auto;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 10rem;
+            border-radius: 0;
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            padding: 0;
           }
         }
       }
@@ -60,7 +70,7 @@
     }
   </style>
 </form>
-<div>
+<div class="gnb">
   <a href="/pages/about.html">About</a>
   <a href="/pages/fav.html">Favorites</a>
   <button class="btn-menu" aria-label="전체메뉴"></button>
@@ -82,9 +92,10 @@
         top: 2rem;
       }
     }
+  }
 
-
-    >div {
+  @scope (.gnb) {
+    :scope {
       justify-self: end;
       display: flex;
       gap: 2rem;
@@ -100,13 +111,26 @@
         line-height: 2.4rem;
       }
 
+      #megamenu & {
+        justify-self: center;
+        display: block;
+      }
+
       @media (width < 1024px) {
         a {
           display: none;
+
+          #megamenu & {
+            display: block;
+            font-size: 3rem;
+            font-weight: 400;
+            line-height: 2;
+          }
         }
 
         button {
           display: block;
+
         }
       }
     }
